# ZenPCBParser

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  __init__.py  main.py  pyproject.toml  version.py
cli/: auroradb.py  common.py  convert.py  dump.py  inspect.py  main.py  odbpp.py  schema.py  semantic.py
crates/aedb_parser/: Cargo.toml
crates/aedb_parser/src/: auroradb.rs  domain.rs  lib.rs  main.rs  model.rs  parser.rs  writer.rs
crates/alg_parser/: Cargo.toml
crates/alg_parser/src/: lib.rs  main.rs  model.rs  parser.rs
crates/altium_parser/: Cargo.toml
crates/altium_parser/src/: lib.rs  main.rs  model.rs  parser.rs
crates/altium_parser/src/parser/: binary_records.rs  cfb.rs  constants.rs  geometry.rs  layers.rs  primitive_names.rs  properties.rs  property_records.rs  reader.rs  strings.rs
crates/brd_parser/: Cargo.toml
crates/brd_parser/src/: lib.rs  main.rs  model.rs  parser.rs
crates/brd_parser/src/parser/: blocks.rs  constants.rs  header.rs  reader.rs
crates/odbpp_exporter/: Cargo.toml
crates/odbpp_exporter/src/: lib.rs  main.rs  writer.rs
crates/odbpp_exporter/src/writer/: attributes.rs  components.rs  eda_data.rs  entity.rs  features.rs  formatting.rs  model.rs  netlist.rs  package.rs
crates/odbpp_parser/: Cargo.toml  README.md  pyproject.toml
crates/odbpp_parser/src/: archive.rs  lib.rs  main.rs  model.rs  parser.rs
docs/: CHANGELOG.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  architecture.md  architecture_review_2026-04-30.md  documentation_style.md  versioning_policy.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: README.md  aedb-def-rust-parser-writer.md
docs/exec-plans/completed/: README.md  altium-rust-parser.md  brd-large-board-performance.md  odbpp-rust-exporter.md
docs/product-specs/: index.md  new-user-onboarding.md
docs/references/: design-system-reference-llms.txt  nixpacks-llms.txt  uv-llms.txt
pipeline/: __init__.py  convert.py  loaders.py  result.py  types.py
scripts/: clean_project.ps1  setup_env.ps1
semantic/: __init__.py  converter.py  models.py  passes.py  schema.py  version.py
semantic/adapters/: __init__.py  aedb.py  aedb_def_binary.py  alg.py  altium.py  auroradb.py  brd.py  odbpp.py  utils.py
semantic/docs/: CHANGELOG.md  SCHEMA_CHANGELOG.md  aedb_to_semantic.md  architecture.md  format_mapping.md  odbpp_to_semantic_mapping.md  semantic_json_schema.md  semantic_schema.json
shared/: __init__.py  jsonio.py  logging.py  metrics.py
sources/: __init__.py
sources/aedb/: __init__.py  analysis.py  def_binary.py  def_models.py  errors.py  models.py  normalizers.py  parser.py  session.py  version.py
sources/aedb/docs/: CHANGELOG.md  DEF_BINARY_FORMAT.md  SCHEMA_CHANGELOG.md  aedb_json_schema.md  aedb_schema.json
sources/aedb/extractors/: __init__.py  components.py  context.py  dotnet_padstacks.py  dotnet_points.py  layers.py  layout.py  materials.py  metadata.py  nets.py  padstack_records.py  padstacks.py  precision.py  primitives.py  summary.py
sources/alg/: __init__.py  errors.py  models.py  parser.py  schema.py  version.py
sources/altium/: __init__.py  errors.py  models.py  parser.py  schema.py  version.py
sources/auroradb/: __init__.py  block.py  diff.py  inspect.py  models.py  reader.py  schema.py  version.py
sources/auroradb/docs/: CHANGELOG.md  SCHEMA_CHANGELOG.md  architecture.md  auroradb.md  auroradb_json_schema.md  auroradb_schema.json
sources/brd/: __init__.py  errors.py  models.py  parser.py  schema.py  version.py
sources/brd/docs/: BRD_BINARY_FORMAT.md
sources/odbpp/: __init__.py  coverage.py  errors.py  models.py  parser.py  schema.py  version.py
sources/odbpp/docs/: CHANGELOG.md  SCHEMA_CHANGELOG.md  odbpp_design_spec_summary.md  odbpp_json_schema.md  odbpp_schema.json
targets/: __init__.py
targets/auroradb/: __init__.py  direct.py  exporter.py  formatting.py  geometry.py  layout.py  names.py  parts.py  plan.py  stackup.py  writer.py
targets/auroradb/aaf/: __init__.py  commands.py  executor.py  geometry.py  lexer.py  parser.py  translator.py
targets/odbpp/: __init__.py  exporter.py
tests/: conftest.py  test_aedb_def_binary_semantic_adapter.py  test_alg_semantic_adapter.py  test_altium_semantic_adapter.py  test_architecture_refactor.py  test_auroradb_block.py  test_auroradb_component_export.py  test_auroradb_parts_exporter.py  test_brd_semantic_adapter.py  test_golden_fixtures.py  test_logging_style.py  test_odbpp_semantic_adapter.py  test_private_case_regression.py
tests/fixtures/golden/: semantic_minimal.json  semantic_minimal_expected.json
