[package]
name = "aedb_parser"
version = "0.4.0"
edition = "2021"
description = "AEDB DEF parser and writer core, CLI, and Python extension used by Aurora Translator"
license = "MIT"

[features]
default = []
python = ["dep:pyo3", "dep:pythonize"]

[lib]
name = "aurora_aedb_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["abi3-py310"], optional = true }
pythonize = { version = "0.28.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
