[package]
name = "odbpp_parser"
version = "0.6.3"
edition = "2021"
description = "ODB++ parser core, CLI, and Python extension used by Aurora Translator"
license = "MIT"

[features]
default = []
python = ["dep:pyo3", "dep:pythonize"]

[lib]
name = "aurora_odbpp_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = "1.0"
pyo3 = { version = "0.28.3", features = ["abi3-py310"], optional = true }
pythonize = { version = "0.28.0", optional = true }
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
thiserror = "1.0"
walkdir = "2.5"
zip = "2.2"
